--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/5f6d378910.js" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -31,9 +32,10 @@
   </head>
   <body>
     <noscript>Enable JavaScript for the optimal experience.</noscript>
-    <header style="background-color: blueviolet;opacity: inherit;">
+    <div id="root"></div>
+    <!-- <header style="background-color: blueviolet;opacity: inherit;">
       <nav style="display: inline-flex;">
-          <div class="title"><img src="%PUBLIC_URL%/images/weather_app_icon.png" style="height: 75px; width: 75px;" alt="App Logo">UbiWeather</div>
+          <div class="title"><img src="%PUBLIC_URL%/images/weather_app_icon.png" style="height: 75px; width: 75px;" alt="">UbiWeather</div>
           <ul class="options">
               <a href="#Option1" style="color:lime;">Option 1</a>
               <a href="#Option2" style="color:lime;">Option 2</a>
@@ -50,8 +52,7 @@
             <input type="text" placeholder="Enter city name...">
             <button type="submit"><i class="fa fa-search"></i></button>
         </div>
-    </nav>
-    <div id="root"></div>
+    </nav> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
