--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/5f6d378910.js" crossorigin="anonymous"></script>
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#2ED1E1" />
     <meta
       name="description"
       content="Search for the weather anywhere and everywhere."
